:art: ui/ux: ayout collapse fix

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -283,7 +283,6 @@ select {
     height: 100%;
     margin: 0 auto;
     display: flex;
-    align-items: center;
   }
 }
 @media screen and (max-width: 768px) {
